posiGen_FullsendBox/src/objects/System_PV_Production__c.object
<CustomObject>
    <fields>
        <fullName>Channel_Number__c</fullName>
        <formula>VALUE(System_Channel__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Energy_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Energy Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interval_Type__c</fullName>
        <label>Interval Type</label>
        <picklist>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 Minute</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsDirectSystemRelCorrect__c</fullName>
        <description>Compares the direct system relationship on this record to the System on the Parent Channel</description>
        <formula>System_ID_from_Channel__c = System_Record_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Compares the direct system relationship on this record to the System on the Parent Channel</inlineHelpText>
        <label>IsDirectSystemRelCorrect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_DateTime_Captured_in_Period__c</fullName>
        <description>this shows the max date/time of the production data rolled up for that period (not applicable for 15min interval data)</description>
        <inlineHelpText>this shows the max date/time of the production data rolled up for that period (not applicable for 15min interval data)</inlineHelpText>
        <label>Last DateTime Captured in Period</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Model_W__c</fullName>
        <description>The modeled amount of production, currently calculated by PowerDash.</description>
        <label>Model (W)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Production_Validation_from_PD__c</fullName>
        <description>This is a monthly Production amount provided by PD.  Used to validate against the &quot;Daily Rollup (W)&quot; which is acquired by getting daily data from PD and rolling up to the month level.</description>
        <inlineHelpText>This is a monthly Production amount provided by PD.  Used to validate against the &quot;Daily Rollup (W)&quot; which is acquired by getting daily data from PD and rolling up to the month level.</inlineHelpText>
        <label>Production (W)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Production_W__c</fullName>
        <label>Daily Rollup (W)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Channel__c</fullName>
        <label>System Channel</label>
        <referenceTo>System_Channel__c</referenceTo>
        <relationshipName>System_PV_Monthly_Production_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>System_ID_from_Channel__c</fullName>
        <formula>System_Channel__r.System__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System ID from Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Record_ID__c</fullName>
        <formula>System__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <label>System</label>
        <referenceTo>Systems__c</referenceTo>
        <relationshipName>System_PV_Monthly_Production_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>performance_benchmark__c</fullName>
        <description>Compare the actual performance of the system to the performance model data</description>
        <formula>Production_Validation_from_PD__c / Model_W__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Compare the actual performance of the system to the performance model data</inlineHelpText>
        <label>Performance Benchmark</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>System PV Production</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Production ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System PV Production Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>